# mlops_data_pipeline

./: .coveragerc  .gitignore  Dockerfile  LICENSE  Makefile  README.md  entrypoint.sh  pyproject.toml  requirements.txt
.astro/: config.yaml
.github/workflows/: ci_pipeline.yml
dags/: online_retail.py  stock_pred.py
include/: config.yml
include/dataset/: cleaned_NSE-TATAGLOBAL.csv
tests/: conftest.py
tests/dags/: test_online_retail.py  test_stock_pred.py
